[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backup-archeology"
version = "1.0.0"
description = "Known-junk cleanup for backup trees"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Backup Archeology Team"}
]
license = {text = "MIT"}
keywords = ["backup", "cleanup", "nas", "kopia", "storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/endthestart/backup-archeology"
Repository = "https://github.com/endthestart/backup-archeology"
Issues = "https://github.com/endthestart/backup-archeology/issues"

[project.scripts]
ba = "ba:main"

[tool.setuptools]
py-modules = ["ba"]
